[tool.poetry]
name = "ml"
version = "0.1.0"
description = "Made using the Python hyper-modern tutorial"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sithankanna/ML"
repository = "https://github.com/sithankanna/ML"
keywords = ["hypermodern"]
authors = ["Sithan Kanna <sithankanna@gmail.com>"]

[tool.poetry.scripts]
hello = "ml.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
pandas = "^1.1.4"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
