[tool.poetry]
name = "ml"
version = "0.1.0"
description = "Made using the Python hyper-modern tutorial"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sithankanna/ML"
repository = "https://github.com/sithankanna/ML"
keywords = ["hypermodern"]
authors = ["Sithan Kanna <sithankanna@gmail.com>"]

[tool.poetry.scripts]
hello = "ml.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
pandas = "^1.1.4"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.4.0"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["ml"]

[tool.coverage.report]
show_missing = true
